syntax = "proto3";

option csharp_namespace = "Basket.API.gRPC";

package BasketApi;

service Basket {
	rpc GetBasket(GetBasketRequest) returns (CustomerBasketResponse) {}
	rpc UpdateBasket(UpdateBasketRequest) returns (CustomerBasketResponse) {}
	rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse) {}
}

message GetBasketRequest{}

message CustomerBasketResponse{
	repeated BasketItem items = 1;
}

message BasketItem {
	int32 BookId = 2;
	string Title = 3;
	float UnitPrice = 4;
	float OldUnitPrice = 5;
	int32 Quantity = 6;
	string ImageUrl = 7;
}

message UpdateBasketRequest {
	repeated BasketItem items = 2;
}

message DeleteBasketRequest {

}

message DeleteBasketResponse{

}

